--- a/.github/workflows/hierarchy.yml
+++ b/.github/workflows/hierarchy.yml
@@ -21,8 +21,9 @@ jobs:
           git config --global user.name ${{ secrets.USER }}
           git config --global user.email ${{ secrets.EMAIL }}
 
-          git add -A
-          git commit -m "Restructured the tree"
+          git add .
+          git commit -m "Restructured the tree" -a || true
+          # The above command will fail if no changes were present, so we ignore that.
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
